# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added

- Emulator and minipavi API in the axum example
- Fill widget

### Changed

- Render repeated characters with REP

### Removed

## [0.2.0] - 2025-01-18

### Added

- Async versions
- Axum support

### Changed

- Not anymore split in many crates

### Removed

- Sync version
- Tungsten ws support
- minitel-ratatui, minitel-esp and minitel-ws crates

## [0.1.0] - 2025-01-04

Initial version